crates/bityzba/tests/ui/fail/enum_tuple_variant_requires_pattern.rs
use bityzba::invariant;

#[invariant(::Pair => true)]
enum Choice {
    Pair(String, usize),
}

fn main() {}
