crates/bityzba/tests/ui/fail/enum_tuple_variant_requires_pattern.stderr
error: tuple variant invariant requires an explicit tuple pattern
 --> tests/ui/fail/enum_tuple_variant_requires_pattern.rs:5:5
  |
5 |     Pair(String, usize),
  |     ^^^^
